# CppDevCourse-hw2

./: CMakeLists.txt  README.md  test.py
.github/workflows/: ci.yml
